@startuml

title __INITIALIZATION's Class Diagram__\n

  package com.voicenotes {
    package com.voicenotes.view.initialization {
      class InitProgressBarActivity {
          - progressBar : ProgressBar
          ~ count : Integer
          # onCreate()
      }
    }
  }
  

  package com.voicenotes {
    package com.voicenotes.view.initialization {
      class MyTask {
          # doInBackground()
          # onPostExecute()
          # onPreExecute()
          # onProgressUpdate()
      }
    }
  }
  

  package com.voicenotes {
    package com.voicenotes.view.initialization {
      class SplashActivity {
          ~ progressBar : ProgressBar
          # onCreate()
      }
    }
  }
  

  InitProgressBarActivity -up-|> AppCompatActivity
  InitProgressBarActivity o-- InitProgressBarActivity : thisClass
  InitProgressBarActivity +-down- MyTask
  MyTask -up-|> AsyncTask
  HostCallbacks -up-|> FragmentHostCallback
  SplashActivity -up-|> AppCompatActivity
  HostCallbacks -up-|> FragmentHostCallback


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
